# moodleclient

./: Cargo.toml
src/: arguments.rs  authenticate.rs  config.rs  courses.rs  main.rs
