[package]
name = "moodleclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dialoguer = "0.10.4"
keyring = "2.0.3"
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json"] }
scraper = "0.16.0"
serde = "1.0.164"
serde_json = "1.0.96"
toml = "0.7.4"
